[metadata]
# Minimum requirements for the build system to execute.
name = InMemDB
version = 1.0.4
author = Kweayon Clark
author_email = Kweayon@gmail.com
description = GUI-less in memory sqlite relational databases
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/kwe92/InMemDB
# project_urls =
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
    = src
packages = find:
python_requires = >= 3.6

[options.packages.find]
where = src
